--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<div class="col-md-5">
 				
 			</div>
-			<div  id="game-board" class="col-md-7 text-center">
+			<div  id="playing-field" class="col-md-7 text-center">
 			<h1>LA Rams Hangman Game</h1>
 				
 				<div class="row">
