--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				
 			</div>
 			<div  id="playing-field" class="col-md-7 text-center">
-			<h1>LA Rams Hangman Game</h1>
+			<h1>LA Rams Word Guessing Game</h1>
 				
 				<div class="row">
 					<div class="col-md-4">
